# serde-yaml

./: Cargo.toml
src/: de.rs  lib.rs
src/value/: mod.rs  partial_eq.rs
tests/: test_de.rs
